--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -34,3 +34,47 @@
     color: #212245;
     background: transparent;
 }
+
+.delivery__time-item p{
+    color: #212245;
+}
+
+.footer__title{
+    font-size: 1.1rem;
+    color: #212245;
+    font-weight: 600;
+}
+
+.newsletter{
+    padding: 5px;
+    border: 1px solid #212245;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
+
+.newsletter input{
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+.newsletter input:focus{
+    outline: none;
+}
+
+.newsletter span{
+    background: #212245;
+    padding: 5px 30px;
+    border-radius: 5px;
+}
+
+.newsletter span i{
+    color: #fff;
+}
+
+.newsletter input::placeholder{
+    color: #212245;
+}
