--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -39,3 +39,18 @@
     font-size:  .9rem;
 }
 
+@media only screen and (max-width:992px) {
+
+    .product__content h5 a{
+        font-size: 0.8rem;
+    }
+
+    .product__item{
+        padding: 20px;
+    }
+
+    .addTOCart__btn{
+        padding: 5px 15px;
+        font-size: 0.8rem;
+    }
+}
