--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 .header{
     width: 100%;
-    height: 80px;
-    line-height: 80px;
+    height: 100px;
+    line-height: 100px;
 }
 
 .logo {
@@ -11,13 +11,14 @@
 .logo img{
     width: calc(100% - 60%);
     object-fit: contain;
+    margin-top: -40px;
 }
 
 .logo h5{
     font-weight: 600;
     font-size: 1rem;
     color: #212245;
-    margin-top: -10px;
+    margin-top: -40px;
     margin-bottom: 0;
 }
 
@@ -48,7 +49,7 @@
 
 .cart__badge{
     position: absolute;
-    top: 20px;
+    top: 30px;
     right: -10px;
     background: #df2020;
     color: #fff;
@@ -133,11 +134,15 @@
 
     .header{
         width: 100%;
-        height: 50px;
-        line-height: 50px;
+        height: 80px;
+        line-height: 80px;
+    }
+
+    .logo img{
+        margin-top: -70px !important;
     }
 
     .logo h5{
-        margin-top: 0px;
+        margin-top: -55px;
     }
 }
