--- a/src/styles/shopping-cart.css
+++ b/src/styles/shopping-cart.css
@@ -20,26 +20,54 @@
 
 .cart__close {
     width: 100%;
-    height: 50px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 10px 15px;
+    height: 60px;
+    
+    padding: 10px 20px;
 }
 
 .cart__close span i {
-    font-size: 1.2rem;
-    background: #000;
+    font-size: 1.1rem;
+    background: #212245;
     padding: 5px;
     border-radius: 50%;
     color: #fff;
+    cursor: pointer;
 }
 
 .cart__item-list {
-    height: calc(100vh - 130px);
+    height: calc(100vh - 140px);
     overflow-y: scroll; 
 }
 
 .cart__bottom {
     position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px 20px;
+    width: 100%;
+    height: 80px;
+    background: #df2020;
+}
+
+.cart__bottom h6 {
+    font-size: 1rem;
+    color: #fff;
+}
+
+.cart__bottom h6 span {
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.cart__bottom button {
+    border: none;
+    padding: 4px 20px;
+    border-radius: 5px;
+    background: #fff;
+    color: #212245;
+}
+
+.cart__bottom button a {
+    color: #212245;
+    font-weight: 600;
 }
